force-app/main/default/objects/Payment_Transaction__c/fields/Authorization_Date__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Date__c</fullName>
    <description>Payment Authorization Date/Time</description>
    <label>Authorization date/time</label>
    <type>DateTime</type>
</CustomField>