force-app/main/default/objects/Payment_Transaction__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <description>Payment Card Type</description>
    <label>Card Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>