force-app/main/default/objects/Payment_Transaction__c/fields/ERP_Reference__c.field-meta.xml
<CustomField>
    <fullName>ERP_Reference__c</fullName>
    <description>ERP Reference number of payment  transaction in 3rd party ERP system SAP/Oracle.</description>
    <label>ERP Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>