force-app/main/default/objects/Payment_Transaction__c/fields/ERP_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>ERP_Sync_Status__c</fullName>
    <description>ERP Sync Status</description>
    <label>ERP Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sync Required</fullName>
                <default>true</default>
                <label>Sync Required</label>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>