force-app/main/default/objects/Payment_Transaction__c/fields/Gateway_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Account_ID__c</fullName>
    <description>Payment Gateway Account ID</description>
    <label>Gateway Account ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>