force-app/main/default/objects/Payment_Transaction__c/fields/Gateway_ID__c.field-meta.xml
<CustomField>
    <fullName>Gateway_ID__c</fullName>
    <description>Payment Gateway ID</description>
    <label>Gateway ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>