force-app/main/default/objects/Payment_Transaction__c/fields/Gateway_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Reference_ID__c</fullName>
    <description>Payment Gateway Reference ID</description>
    <label>Gateway Reference ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>