force-app/main/default/objects/Payment_Transaction__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invoice</description>
    <label>Invoice</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipLabel>Payment Transactions</relationshipLabel>
    <relationshipName>Payment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>