force-app/main/default/objects/Payment_Transaction__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Payment Transactions</relationshipLabel>
    <relationshipName>Payment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>