force-app/main/default/objects/Payment_Transaction__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Payment Method</description>
    <label>Payment Method</label>
    <length>30</length>
    <type>Text</type>
</CustomField>