force-app/main/default/objects/Payment_Transaction__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>Current Payment Status</description>
    <label>Payment Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>