force-app/main/default/objects/Payment_Transaction__c/fields/Source_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Payment_ID__c</fullName>
    <description>Source Payment ID</description>
    <label>Source Payment ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>